# bi-est-python

./: .gitignore  CIEllipse.py  LICENSE  Mixture.py  README.md  demo-2D.ipynb  demo.ipynb  empnu.py  emutils.py  initialization.py  logl.py  mixtureUtils.py  optutils.py  pyproject.toml
bi_est_python/: Mixture.py  empnu.py  emutils.py  initialization.py  pnu_em.py
pnuem/: Mixture.py  empnu.py  emutils.py  initialization.py  logl.py  mixtureUtils.py
tests/: test_pnu_em.py
